--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
+    "@mui/styled-engine-sc": "^5.10.0",
+    "@react-pdf/renderer": "^2.3.0",
+    "events": "^3.3.0",
+    "jodit-react": "^1.3.15",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
+    "react-input-color": "^4.0.1",
+    "react-pdf": "^5.7.2",
+    "react-to-print": "^2.14.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.21.0",
